package com.pluralsight.asset;

public class BankAccount {

    public void withdraw() {

    }

    public void deposit() {

    }
}
