package com.pluralsight.asset;

public class CreditCard {
    public void charge() {

    }
    public void pay() {

    }

}
