package com.pluralsight.asset;

import java.util.ArrayList;

public class Portfolio {
    String name;
    String owner;
    ArrayList<FixedAsset> assets;

    public Portfolio(String name, String owner) {
        this.name = name;
        this.owner = owner;
    }

    public ArrayList<FixedAsset> add(FixedAsset asset) {
        return ;
    }

    public double getValue() {

    }
}
