package com.pluralsight.asset;

public interface Valuable {

    public double getValue() {

    }
}
